--- a/arch/arm64/configs/a_defconfig
+++ b/arch/arm64/configs/a_defconfig
@@ -561,7 +561,7 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 # CONFIG_CPU_BOOST is not set
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_SCHEDUTIL_UP_RATE_LIMIT=0
-CONFIG_SCHEDUTIL_DOWN_RATE_LIMIT=5000
+CONFIG_SCHEDUTIL_DOWN_RATE_LIMIT=12000
 
 #
 # CPU frequency scaling drivers
@@ -760,13 +760,13 @@ CONFIG_IOSCHED_SIO=y
 CONFIG_CFQ_GROUP_IOSCHED=y
 CONFIG_IOSCHED_ZEN=y
 # CONFIG_DEFAULT_DEADLINE is not set
-# CONFIG_DEFAULT_CFQ is not set
+CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_NOOP is not set
 # CONFIG_DEFAULT_SIO is not set
 # CONFIG_DEFAULT_FIOPS is not set
-CONFIG_DEFAULT_ZEN=y
+# CONFIG_DEFAULT_ZEN is not set
 # CONFIG_DEFAULT_MAPLE is not set
-CONFIG_DEFAULT_IOSCHED="zen"
+CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_MQ_IOSCHED_DEADLINE=y
 CONFIG_MQ_IOSCHED_KYBER=y
 CONFIG_IOSCHED_BFQ=y
