--- a/arch/arm64/configs/a_defconfig
+++ b/arch/arm64/configs/a_defconfig
@@ -322,6 +322,14 @@ CONFIG_PCI_SYSCALL=y
 CONFIG_PCI_MSI=y
 CONFIG_PCI_MSI_IRQ_DOMAIN=y
 CONFIG_PCI_QUIRKS=y
+
+CONFIG_CPU_INPUT_BOOST=y
+CONFIG_INPUT_BOOST_DURATION_MS=1000
+CONFIG_WAKE_BOOST_DURATION_MS=0
+CONFIG_MAX_BOOST_FREQ_PERF=1056000
+CONFIG_INPUT_BOOST_FREQ_PERF=1056000
+CONFIG_MAX_BOOST_FREQ_LP=1075200
+CONFIG_INPUT_BOOST_FREQ_LP=1075200
 # CONFIG_PCI_DEBUG is not set
 # CONFIG_PCI_STUB is not set
 # CONFIG_PCI_IOV is not set
