--- a/arch/arm64/configs/a_defconfig
+++ b/arch/arm64/configs/a_defconfig
@@ -360,7 +360,7 @@ CONFIG_PCI_MSM_MSI=y
 # CONFIG_PCI_HISI is not set
 # CONFIG_PCIE_QCOM is not set
 # CONFIG_PCIE_KIRIN is not set
-
+CONFIG_IKHEADERS=y
 #
 # PCI Endpoint
 #
