--- a/arch/arm64/configs/a_defconfig
+++ b/arch/arm64/configs/a_defconfig
@@ -3383,7 +3383,7 @@ CONFIG_MEDIA_CONTROLLER=y
 CONFIG_VIDEO_DEV=y
 CONFIG_VIDEO_V4L2_SUBDEV_API=y
 CONFIG_VIDEO_V4L2=y
-CONFIG_VIDEO_ADV_DEBUG=y
+# CONFIG_VIDEO_ADV_DEBUG is not set
 CONFIG_VIDEO_FIXED_MINOR_RANGES=y
 CONFIG_V4L2_MEM2MEM_DEV=y
 CONFIG_DVB_CORE=y
@@ -5162,8 +5162,8 @@ CONFIG_QCOM_DEVFREQ_DEVBW=y
 CONFIG_ARM_QCOM_DEVFREQ_QOSLAT=y
 CONFIG_DEVFREQ_GOV_STATICMAP=y
 CONFIG_DEVFREQ_BOOST=y
-CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=58
-CONFIG_DEVFREQ_WAKE_BOOST_DURATION_MS=500
+CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=300
+CONFIG_DEVFREQ_WAKE_BOOST_DURATION_MS=100
 CONFIG_DEVFREQ_MSM_LLCCBW_DDR_BOOST_FREQ=2597
 # CONFIG_PM_DEVFREQ_EVENT is not set
 CONFIG_EXTCON=y
