--- a/arch/arm64/configs/a_defconfig
+++ b/arch/arm64/configs/a_defconfig
@@ -78,7 +78,7 @@ CONFIG_PREEMPT_COUNT=y
 #
 CONFIG_TICK_CPU_ACCOUNTING=y
 # CONFIG_VIRT_CPU_ACCOUNTING_GEN is not set
-CONFIG_IRQ_TIME_ACCOUNTING=y
+# CONFIG_IRQ_TIME_ACCOUNTING is not set
 # CONFIG_SCHED_WALT is not set
 CONFIG_HAVE_SCHED_AVG_IRQ=y
 # CONFIG_BSD_PROCESS_ACCT is not set
@@ -181,7 +181,7 @@ CONFIG_HAVE_UID16=y
 CONFIG_SYSCTL_EXCEPTION_TRACE=y
 CONFIG_BPF=y
 CONFIG_EXPERT=y
-CONFIG_UID16=y
+# CONFIG_UID16 is not set
 CONFIG_MULTIUSER=y
 # CONFIG_SGETMASK_SYSCALL is not set
 CONFIG_SYSFS_SYSCALL=y
@@ -190,7 +190,7 @@ CONFIG_SYSFS_SYSCALL=y
 CONFIG_POSIX_TIMERS=y
 CONFIG_PRINTK=y
 CONFIG_PRINTK_NMI=y
-CONFIG_BUG=y
+# CONFIG_BUG is not set
 CONFIG_ELF_CORE=y
 CONFIG_BASE_FULL=y
 CONFIG_FUTEX=y
@@ -203,8 +203,8 @@ CONFIG_SHMEM=y
 CONFIG_AIO=y
 CONFIG_ADVISE_SYSCALLS=y
 CONFIG_MEMBARRIER=y
-CONFIG_KALLSYMS=y
-CONFIG_KALLSYMS_ALL=y
+CONFIG_KALLSYMS is not set
+CONFIG_KALLSYMS_ALL is not set
 CONFIG_KALLSYMS_BASE_RELATIVE=y
 CONFIG_BPF_SYSCALL=y
 CONFIG_BPF_JIT_ALWAYS_ON=y
@@ -222,7 +222,7 @@ CONFIG_HAVE_PERF_EVENTS=y
 CONFIG_PERF_EVENTS=y
 # CONFIG_PERF_USER_SHARE is not set
 # CONFIG_DEBUG_PERF_USE_VMALLOC is not set
-CONFIG_VM_EVENT_COUNTERS=y
+# CONFIG_VM_EVENT_COUNTERS is not set
 # CONFIG_SLUB_DEBUG is not set
 # CONFIG_COMPAT_BRK is not set
 # CONFIG_SLAB is not set
@@ -507,7 +507,7 @@ CONFIG_KUSER_HELPERS=y
 #
 CONFIG_SUSPEND=y
 CONFIG_SUSPEND_FREEZER=y
-# CONFIG_SUSPEND_SKIP_SYNC is not set
+CONFIG_SUSPEND_SKIP_SYNC=y
 # CONFIG_HIBERNATION is not set
 CONFIG_PM_SLEEP=y
 CONFIG_PM_SLEEP_SMP=y
@@ -601,7 +601,7 @@ CONFIG_HAVE_ARM_SMCCC=y
 #
 # Tegra firmware driver
 #
-CONFIG_MSM_TZ_LOG=y
+# CONFIG_MSM_TZ_LOG is not set
 # CONFIG_VIRTUALIZATION is not set
 CONFIG_ARM64_CRYPTO=y
 CONFIG_CRYPTO_SHA256_ARM64=y
@@ -1107,7 +1107,7 @@ CONFIG_NETFILTER_XT_TARGET_DSCP=y
 CONFIG_NETFILTER_XT_TARGET_IDLETIMER=y
 CONFIG_NETFILTER_XT_TARGET_HARDIDLETIMER=y
 # CONFIG_NETFILTER_XT_TARGET_LED is not set
-CONFIG_NETFILTER_XT_TARGET_LOG=y
+# CONFIG_NETFILTER_XT_TARGET_LOG is not set
 CONFIG_NETFILTER_XT_TARGET_MARK=y
 CONFIG_NETFILTER_XT_NAT=y
 CONFIG_NETFILTER_XT_TARGET_NETMAP=y
@@ -1546,7 +1546,7 @@ CONFIG_QCOM_EBI2=y
 # CONFIG_SIMPLE_PM_BUS is not set
 # CONFIG_VEXPRESS_CONFIG is not set
 CONFIG_MHI_BUS=y
-CONFIG_MHI_DEBUG=y
+# CONFIG_MHI_DEBUG is not set
 
 #
 # MHI controllers
@@ -1809,8 +1809,8 @@ CONFIG_BLK_DEV_SD=y
 # CONFIG_BLK_DEV_SR is not set
 CONFIG_CHR_DEV_SG=y
 CONFIG_CHR_DEV_SCH=y
-CONFIG_SCSI_CONSTANTS=y
-CONFIG_SCSI_LOGGING=y
+# CONFIG_SCSI_CONSTANTS is not set
+# CONFIG_SCSI_LOGGING is not set
 CONFIG_SCSI_SCAN_ASYNC=y
 
 #
@@ -2775,7 +2775,7 @@ CONFIG_SPI_SPIDEV=y
 # CONFIG_SPI_SLAVE is not set
 CONFIG_SPMI=y
 CONFIG_SPMI_MSM_PMIC_ARB=y
-CONFIG_SPMI_MSM_PMIC_ARB_DEBUG=y
+# CONFIG_SPMI_MSM_PMIC_ARB_DEBUG is not set
 # CONFIG_HSI is not set
 CONFIG_PPS=y
 # CONFIG_PPS_DEBUG is not set
@@ -3821,7 +3821,7 @@ CONFIG_SND_DYNAMIC_MINORS=y
 CONFIG_SND_MAX_CARDS=32
 CONFIG_SND_SUPPORT_OLD_API=y
 CONFIG_SND_PROC_FS=y
-CONFIG_SND_VERBOSE_PROCFS=y
+# CONFIG_SND_VERBOSE_PROCFS is not set
 # CONFIG_SND_VERBOSE_PRINTK is not set
 # CONFIG_SND_DEBUG is not set
 # CONFIG_SND_SEQUENCER is not set
@@ -4907,7 +4907,7 @@ CONFIG_MSM_VIDEOCC_KONA=y
 CONFIG_MSM_DISPCC_KONA=y
 CONFIG_MSM_CAMCC_KONA=y
 CONFIG_MSM_GPUCC_KONA=y
-CONFIG_MSM_DEBUGCC_KONA=y
+# CONFIG_MSM_DEBUGCC_KONA is not set
 CONFIG_MSM_NPUCC_KONA=y
 # CONFIG_SM_GCC_LITO is not set
 # CONFIG_SM_VIDEOCC_LITO is not set
@@ -5081,7 +5081,7 @@ CONFIG_MSM_PIL_SSR_GENERIC=y
 CONFIG_MSM_BOOT_STATS=y
 CONFIG_QCOM_DCC_V2=y
 CONFIG_QCOM_EUD=y
-CONFIG_QCOM_MINIDUMP=y
+# CONFIG_QCOM_MINIDUMP is not set
 # CONFIG_QCOM_DYN_MINIDUMP_STACK is not set
 CONFIG_MINIDUMP_MAX_ENTRIES=200
 # CONFIG_QCOM_APR is not set
@@ -6231,7 +6231,7 @@ CONFIG_FRAME_WARN=4096
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
 CONFIG_SECTION_MISMATCH_WARN_ONLY=y
 CONFIG_ARCH_WANT_FRAME_POINTERS=y
-CONFIG_FRAME_POINTER=y
+# CONFIG_FRAME_POINTER is not set
 # CONFIG_DEBUG_FORCE_WEAK_PER_CPU is not set
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_MAGIC_SYSRQ_DEFAULT_ENABLE=0x1
@@ -6411,7 +6411,7 @@ CONFIG_ARCH_HAS_DEVMEM_IS_ALLOWED=y
 # CONFIG_PID_IN_CONTEXTIDR is not set
 # CONFIG_ARM64_RANDOMIZE_TEXT_OFFSET is not set
 # CONFIG_DEBUG_WX is not set
-CONFIG_DEBUG_ALIGN_RODATA=y
+# CONFIG_DEBUG_ALIGN_RODATA is not set
 # CONFIG_ARM64_RELOC_TEST is not set
 # CONFIG_ARM64_STRICT_BREAK_BEFORE_MAKE is not set
 # CONFIG_CORESIGHT is not set
