--- a/arch/arm64/configs/a_defconfig
+++ b/arch/arm64/configs/a_defconfig
@@ -423,7 +423,7 @@ CONFIG_ARCH_NR_GPIO=1280
 CONFIG_HOLES_IN_ZONE=y
 CONFIG_HZ_100=y
 # CONFIG_HZ_250 is not set
-CONFIG_HZ_300 is not set
+# CONFIG_HZ_300 is not set
 # CONFIG_HZ_1000 is not set
 CONFIG_HZ=100
 CONFIG_SCHED_HRTICK=y
@@ -5163,7 +5163,7 @@ CONFIG_ARM_QCOM_DEVFREQ_QOSLAT=y
 CONFIG_DEVFREQ_GOV_STATICMAP=y
 CONFIG_DEVFREQ_BOOST=y
 CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=250
-CONFIG_DEVFREQ_WAKE_BOOST_DURATION_MS=200
+CONFIG_DEVFREQ_WAKE_BOOST_DURATION_MS=100
 CONFIG_DEVFREQ_MSM_LLCCBW_DDR_BOOST_FREQ=2597
 # CONFIG_PM_DEVFREQ_EVENT is not set
 CONFIG_EXTCON=y
