--- a/arch/arm64/configs/a_defconfig
+++ b/arch/arm64/configs/a_defconfig
@@ -507,7 +507,7 @@ CONFIG_KUSER_HELPERS=y
 #
 CONFIG_SUSPEND=y
 CONFIG_SUSPEND_FREEZER=y
-# CONFIG_SUSPEND_SKIP_SYNC is not set
+CONFIG_SUSPEND_SKIP_SYNC=y
 # CONFIG_HIBERNATION is not set
 CONFIG_PM_SLEEP=y
 CONFIG_PM_SLEEP_SMP=y
@@ -1046,7 +1046,7 @@ CONFIG_NETFILTER_NETLINK_QUEUE=y
 CONFIG_NETFILTER_NETLINK_LOG=y
 # CONFIG_NETFILTER_NETLINK_OSF is not set
 CONFIG_NF_CONNTRACK=y
-CONFIG_NF_LOG_COMMON=y
+# CONFIG_NF_LOG_COMMON is not set
 # CONFIG_NF_LOG_NETDEV is not set
 CONFIG_NETFILTER_CONNCOUNT=y
 CONFIG_NF_CONNTRACK_MARK=y
@@ -1183,7 +1183,7 @@ CONFIG_NF_SOCKET_IPV4=y
 CONFIG_NF_TPROXY_IPV4=y
 CONFIG_NF_DUP_IPV4=y
 # CONFIG_NF_LOG_ARP is not set
-CONFIG_NF_LOG_IPV4=y
+# CONFIG_NF_LOG_IPV4 is not set
 CONFIG_NF_REJECT_IPV4=y
 CONFIG_NF_NAT_IPV4=y
 CONFIG_NF_NAT_MASQUERADE_IPV4=y
@@ -1219,7 +1219,7 @@ CONFIG_NF_SOCKET_IPV6=y
 CONFIG_NF_TPROXY_IPV6=y
 CONFIG_NF_DUP_IPV6=y
 CONFIG_NF_REJECT_IPV6=y
-CONFIG_NF_LOG_IPV6=y
+# CONFIG_NF_LOG_IPV6 is not set
 # CONFIG_NF_NAT_IPV6 is not set
 CONFIG_IP6_NF_IPTABLES=y
 # CONFIG_IP6_NF_MATCH_AH is not set
@@ -1810,7 +1810,7 @@ CONFIG_BLK_DEV_SD=y
 CONFIG_CHR_DEV_SG=y
 CONFIG_CHR_DEV_SCH=y
 CONFIG_SCSI_CONSTANTS=y
-CONFIG_SCSI_LOGGING=y
+# CONFIG_SCSI_LOGGING is not set
 CONFIG_SCSI_SCAN_ASYNC=y
 
 #
@@ -5163,7 +5163,7 @@ CONFIG_ARM_QCOM_DEVFREQ_QOSLAT=y
 CONFIG_DEVFREQ_GOV_STATICMAP=y
 CONFIG_DEVFREQ_BOOST=y
 CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=250
-CONFIG_DEVFREQ_WAKE_BOOST_DURATION_MS=100
+CONFIG_DEVFREQ_WAKE_BOOST_DURATION_MS=0
 CONFIG_DEVFREQ_MSM_LLCCBW_DDR_BOOST_FREQ=2597
 # CONFIG_PM_DEVFREQ_EVENT is not set
 CONFIG_EXTCON=y
